# OpenGL-Template-Premake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
AppName/: CMakeLists.txt  premake5.lua
EngineName/: CMakeLists.txt  premake5.lua
EngineName/src/: Engine.cpp  Engine.hpp
